@@ -3,6 +3,11 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2007/01/23
+	* Added view_data support to mercenary.*, so that the Homunculus entries
+	  are no longer required on the mob_db.
+	* Added the status icon to NPC_CHANGEUNDEAD and the Flee/Hit foods.
+	* Corrected the check that lets you walk when vending/chatting/etc.
 2007/01/22
 	* Reverted the battle_calc_return_damage code as the previous one was
 	  correct, ninja self-targetted skills CAN be reflected. [Skotlex]
