@@ -901,19 +901,3 @@ REPLACE INTO `mob_db` VALUES (1813,'EVENT_HYDRO','Hydro','Hydrolancer',99,588000
 REPLACE INTO `mob_db` VALUES (1814,'EVENT_MOON','Moonlight Flower','Moonlight Flower',80,30000,0,30000,30000,1,500,800,50,50,1,35,45,112,69,93,10,12,1,2,63,0xA3,150,1276,576,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1815,'EVENT_RICECAKE','Rice Cake','Rice Cake',12,20,0,0,0,1,1,2,100,99,1,1,1,1,1,1,0,0,1,0,20,0xA3,2000,1320,0,300,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1816,'EVENT_GOURD','Gourd','Gourd',12,1000,0,0,0,1,1,2,100,99,1,1,1,1,1,1,0,0,1,0,20,0xA3,2000,96,96,96,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
-REPLACE INTO `mob_db` VALUES (6001,'MER_LIF','Lif','Lif',1,150,40,0,0,2,0,0,0,0,12,20,15,35,24,14,10,0,0,7,20,0x91,150,700,0,300,0,0,0,0,0,0,0,0,999,150,953,5500,912,220,757,61,1003,120,715,200,998,350,0,0,0,0,4072,5);
-REPLACE INTO `mob_db` VALUES (6002,'MER_AMISTR','Amistr','Amistr',1,320,10,0,0,2,0,0,0,0,20,17,35,11,24,13,10,0,0,2,20,0x91,150,700,0,300,0,0,0,0,0,0,0,0,999,150,953,5500,912,220,757,61,1003,120,715,200,998,350,0,0,0,0,4072,5);
-REPLACE INTO `mob_db` VALUES (6003,'MER_FILIR','Filir','Filir',1,90,25,0,0,2,0,0,0,0,29,35,9,8,30,9,10,0,0,2,20,0x91,150,700,0,300,0,0,0,0,0,0,0,0,999,150,953,5500,912,220,757,61,1003,120,715,200,998,350,0,0,0,0,4072,5);
-REPLACE INTO `mob_db` VALUES (6004,'MER_VANILMIRTH','Vanilmirth','Vanilmirth',1,80,11,0,0,2,0,0,0,0,11,11,11,11,11,11,10,0,0,0,20,0x91,150,700,0,300,0,0,0,0,0,0,0,0,7004,2000,7054,5500,1000,250,997,30,512,0,757,250,985,163,0,0,0,0,4072,5);
-REPLACE INTO `mob_db` VALUES (6005,'MER_LIF2','Lif','Lif',1,150,40,0,0,2,0,0,0,0,12,20,15,35,24,14,10,0,0,7,20,0x91,150,700,0,300,0,0,0,0,0,0,0,0,999,150,953,5500,912,220,757,61,1003,120,715,200,998,350,0,0,0,0,4072,5);
-REPLACE INTO `mob_db` VALUES (6006,'MER_AMISTR2','Amistr','Amistr',1,320,10,0,0,2,0,0,0,0,20,17,35,11,24,13,10,0,0,2,20,0x91,150,700,0,300,0,0,0,0,0,0,0,0,7004,2000,7054,5500,1000,250,997,30,512,0,757,250,985,163,0,0,0,0,4072,5);
-REPLACE INTO `mob_db` VALUES (6007,'MER_FILIR2','Filir','Filir',1,90,25,0,0,2,0,0,0,0,29,35,9,8,30,9,10,0,0,2,20,0x91,150,700,0,300,0,0,0,0,0,0,0,0,7004,2000,7054,5500,1000,250,997,30,512,0,757,250,985,163,0,0,0,0,4072,5);
-REPLACE INTO `mob_db` VALUES (6008,'MER_VANILMIRTH2','Vanimirth','Vanilmirth',1,80,11,0,0,2,0,0,0,0,11,11,11,11,11,11,10,0,0,0,20,0x91,150,700,0,300,0,0,0,0,0,0,0,0,7004,2000,7054,5500,1000,250,997,30,512,0,757,250,985,163,0,0,0,0,4072,5);
-REPLACE INTO `mob_db` VALUES (6009,'MER_LIF_H','Lif','Lif',1,150,40,0,0,2,0,0,0,0,12,20,15,35,24,14,10,0,0,7,20,0x91,150,700,0,300,0,0,0,0,0,0,0,0,999,150,953,5500,912,220,757,61,1003,120,715,200,998,350,0,0,0,0,4072,5);
-REPLACE INTO `mob_db` VALUES (6010,'MER_AMISTR_H','Amistr','Amistr',1,320,10,0,0,2,0,0,0,0,20,17,35,11,24,13,10,0,0,2,20,0x91,150,700,0,300,0,0,0,0,0,0,0,0,999,150,953,5500,912,220,757,61,1003,120,715,200,998,350,0,0,0,0,4072,5);
-REPLACE INTO `mob_db` VALUES (6011,'MER_FILIR_H','Filir','Filir',1,90,25,0,0,2,0,0,0,0,29,35,9,8,30,9,10,0,0,2,20,0x91,150,700,0,300,0,0,0,0,0,0,0,0,7004,2000,7054,5500,1000,250,997,30,512,0,757,250,985,163,0,0,0,0,4072,5);
-REPLACE INTO `mob_db` VALUES (6012,'MER_VANILMIRTH_H','Vanilmirth','Vanilmirth',1,80,11,0,0,2,0,0,0,0,11,11,11,11,11,11,10,0,0,0,20,0x91,150,700,0,300,0,0,0,0,0,0,0,0,7004,2000,7054,5500,1000,250,997,30,512,0,757,250,985,163,0,0,0,0,4072,5);
-REPLACE INTO `mob_db` VALUES (6013,'MER_LIF_H2','Lif','Lif',1,150,40,0,0,2,0,0,0,0,12,20,15,35,24,14,10,0,0,7,20,0x91,150,700,0,300,0,0,0,0,0,0,0,0,999,150,953,5500,912,220,757,61,1003,120,715,200,998,350,0,0,0,0,4072,5);
-REPLACE INTO `mob_db` VALUES (6014,'MER_AMISTR_H2','Amistr','Amistr',1,320,10,0,0,2,0,0,0,0,20,17,35,11,24,13,10,0,0,2,20,0x91,150,700,0,300,0,0,0,0,0,0,0,0,7004,2000,7054,5500,1000,250,997,30,512,0,757,250,985,163,0,0,0,0,4072,5);
-REPLACE INTO `mob_db` VALUES (6015,'MER_FILIR_H2','Filir','Filir',1,90,25,0,0,2,0,0,0,0,29,35,9,8,30,9,10,0,0,2,20,0x91,150,700,0,300,0,0,0,0,0,0,0,0,7004,2000,7054,5500,1000,250,997,30,512,0,757,250,985,163,0,0,0,0,4072,5);
-REPLACE INTO `mob_db` VALUES (6016,'MER_VANILMIRTH_H2','Vanimirth','Vanilmirth',1,80,11,0,0,2,0,0,0,0,11,11,11,11,11,11,10,0,0,0,20,0x91,150,700,0,300,0,0,0,0,0,0,0,0,7004,2000,7054,5500,1000,250,997,30,512,0,757,250,985,163,0,0,0,0,4072,5);
